# cpio-mode

./: DESIGN  Makefile.in  NEWS  QUESTIONS  README  README.md  THANKS  cab-test.el  configure.ac  cpio-affiliated-buffers.el  cpio-bin.el  cpio-crc.el  cpio-dired-crc-test.el  cpio-dired-odc-test.el  cpio-dired-test.el  cpio-dired.el  cpio-entry-contents-mode.el  cpio-entry-header.el  cpio-generic-tests.el  cpio-generic.el  cpio-hpbin.el  cpio-hpodc.el  cpio-mode-pkg.el  cpio-mode.el  cpio-modes-test.el  cpio-modes.el  cpio-newc-test.el  cpio-newc-tests.el  cpio-newc.el  cpio-odc.el  cpio-tar.el  cpio-tests.el  cpio-ustar.el  cpio-wanted.el  cpio.el  install-sh  stamp-h.in  test-generic.el  ttt.el
test_data/: fivehundred  fivethirteen
test_data/alphabet/: Makefile  Makefile.in  aaa.sh  aaaa.sh
